fix(welcome): make link more contrast

--- a/src/app/components/root/footer/footer.component.scss
+++ b/src/app/components/root/footer/footer.component.scss
@@ -10,6 +10,14 @@
     display: none;
   }
 
+  a {
+    color: $ksi-footer-link-fg;
+
+    &:hover {
+      color: $ksi-footer-link-fg-hover;
+    }
+  }
+
   .version {
     cursor: pointer;
   }
