--- a/src/app/styles/theme.scss
+++ b/src/app/styles/theme.scss
@@ -13,6 +13,9 @@ body {
   --ksi-page-welcome-banner-bg: #{$ksi-orange-140};
   --ksi-header-fg: #{$ksi-blue-20};
 
+  --ksi-footer-link-fg: #{$ksi-blue-190};
+  --ksi-footer-link-fg-hover: #{$ksi-blue-210};
+
   --ksi-article-preview-bg: #{$ksi-orange-230};
   --ksi-article-preview-border-fg: #{$ksi-orange-190};
 
@@ -64,13 +67,15 @@ body {
   }
 }
 
-// AUTO-GENERATED BY gen-scss-theme.sh on Mon Apr 25 14:34:41 CEST 2022
+// AUTO-GENERATED BY gen-scss-theme.sh on Sun May 15 16:14:39 CEST 2022
 $ksi-article-preview-bg: var(--ksi-article-preview-bg);
 $ksi-article-preview-border-fg: var(--ksi-article-preview-border-fg);
 $ksi-code-bg: var(--ksi-code-bg);
 $ksi-code-fg: var(--ksi-code-fg);
 $ksi-code-string-fg: var(--ksi-code-string-fg);
 $ksi-dropdown-hover-bg: var(--ksi-dropdown-hover-bg);
+$ksi-footer-link-fg: var(--ksi-footer-link-fg);
+$ksi-footer-link-fg-hover: var(--ksi-footer-link-fg-hover);
 $ksi-header-fg: var(--ksi-header-fg);
 $ksi-input-focus-bg: var(--ksi-input-focus-bg);
 $ksi-input-focus-fg: var(--ksi-input-focus-fg);
